# pdf-chapter-splitter

./: .gitignore  Readme.md  app.py  podcast_creator_gemini_tts.py  podcast_creator_multimodel.py  podcast_creator_simple.py  pyproject.toml  requirements.txt
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: build-apk.yml
.streamlit/: config.toml
android_app/: BUILD_GUIDE.md  README.md  TROUBLESHOOTING.md  buildozer.spec  main.py  requirements.txt  test_app.py
docs/: CHANGES.md  CODESPACES_GUIDE.md  DESIGN.md
gemini-try/: basic.py
src/: __init__.py  gemini_detector.py  pdf_processor.py  utils.py
